update the padding of the section to ensure good spacing

--- a/src/assets/css/_global.scss
+++ b/src/assets/css/_global.scss
@@ -12,7 +12,7 @@
 
 @media screen and (width <=726px) {
     .main_container{
-        padding: 3em 3%;
+        padding: 3em 2.5%;
     }
 }
 
